# VolgaCTF-bot

./: .gitignore  README.md  pyproject.toml
.docker/: .env  Dockerfile  docker-compose-dev.yml  docker-compose.yml
src/: bot.py  config.py  main.py  worker.py
src/app/: __init__.py  config.py  logger.py
src/app/bot/: data.py  helper.py  keyboard.py  router.py  services.py  states.py
src/app/mongo/: __init__.py  models.py  services.py
src/app/table/: __init__.py  models.py  services.py
src/app/worker/: __init__.py  services.py  tasks.py
src/bot/: router.py
src/mongo/: services.py
